@@ -1,2 +1,4 @@
 # interaction-counts-pipeline
-Computes "interactions count" for genes and proteins and and stores it in INTERACTION_COUNTS table.
+Computes "interactions count" for genes and proteins and stores it in INTERACTION_COUNTS table.
+
+Only non-zero interaction counts are stored.
