@@ -1,3 +1,6 @@
+Jun 26, 2020
+  entries with zero interactions count are no longer stored in the table
+
 May 10, 2020
   updated jar dependencies
 
